--- a/carousel2.css
+++ b/carousel2.css
@@ -37,7 +37,46 @@
     background-color: #5e068a;
     color: white;
 }
-@media(max-width:450px){
+.a1{
+    font-size: 45px;
+    font-weight: bold;
+    color:  #5e068a;
+}
+.a2{
+    font-size: 20px;
+    color: rgba(132, 61, 198, 0.753);
+}
+.a3{
+    font-size: 17px;
+}
+.a4{
+    border-radius: 100px;
+    height: 45px;
+    width: 150px;
+    color: white;
+    background-color: #5e068a;
+    font-size: 10px;
+}
+.a5{
+    height: 500px;
+}
+@media(max-width:820px){
+    .a1{
+        font-size: 30px;
+     }   
+     .a2{
+        font-size: 20px;
+     }
+     .a3{
+        font-size: 10px;
+     }
+     .a4{
+        height: 30px;
+        width: 100px;
+     }
+     .a5{
+        height: 400px;
+    }
 .i1{
     height: 300px;
 }
