--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 
 
 .i1{
+    width: 100%;
     height: 800px;
     filter: brightness(50%);
 }
@@ -38,16 +39,16 @@
     color: white;
 }
 .a1{
-    font-size: 45px;
+    font-size: 40px;
     font-weight: bold;
     color:  #5e068a;
 }
 .a2{
-    font-size: 20px;
+    font-size: 15px;
     color: rgba(132, 61, 198, 0.753);
 }
 .a3{
-    font-size: 17px;
+    font-size: 12px;
 }
 .a4{
     border-radius: 100px;
@@ -58,27 +59,65 @@
     font-size: 10px;
 }
 .a5{
-    height: 500px;
+    height: 400px;
 }
-@media(max-width:820px){
-    .a1{
-        font-size: 30px;
+
+h3{
+    color: #5e068a;
+}
+span{
+    color: rgba(132, 61, 198, 0.753);
+
+}
+.a6{
+    width: 100%;
+    height: 330px;
+}
+h3{
+    color:  #5e068a;
+}
+span{
+    color: rgba(132, 61, 198, 0.753);
+ 
+}
+.a7{
+    color: #5e068a;
+font-size: 20px;
+font-weight: 600;
+}
+.a8{
+    font-size: 15px;
+    font-weight: 300;
+}
+.a9{
+    color: #5e068a;
+    font-weight: 500;
+}
+.a10{
+    font-size: 13px;
+    font-weight: 500;
+}
+@media(max-width:600px){
+    /* .a1{
+        font-size: 25px;
      }   
      .a2{
-        font-size: 20px;
+        font-size: 8px;
      }
      .a3{
-        font-size: 10px;
+        font-size: 6px;
      }
      .a4{
-        height: 30px;
-        width: 100px;
-     }
-     .a5{
+        height: 20px;
+        width: 70px;
+        font-size: 5px;
+     } */
+     /* .a5{
         height: 400px;
-    }
+    } */
 .i1{
     height: 300px;
+    width: 100%;
 }
 .b2{
     height: 30px;
