--- a/index.css
+++ b/index.css
@@ -1,15 +1,24 @@
 
 
 .i1{
-    width: 100%;
-    height: 800px;
+    max-width: 100%;
+    height: 600px;
     filter: brightness(50%);
+}
+.i3{
+    max-width: 100%;
+    height: 600px;
+    filter: brightness(50%);
+}
+.row{
+    max-width: 100%;
+    height: auto;
 }
 
 .b2{
     background-color: #5e068a;
-    height: 95px;
-    width: 250px;
+    height: 75px;
+    width: 200px;
     border-radius: 100px;
     color: white;
     margin-top: 30px;
@@ -18,7 +27,7 @@
 }
 .p1{
    
-    font-size: 60px;
+    font-size: 45px;
     font-weight: bold;
 }
 .p2{
@@ -38,6 +47,8 @@
     background-color: #5e068a;
     color: white;
 }
+
+
 .a1{
     font-size: 40px;
     font-weight: bold;
@@ -54,9 +65,17 @@
     border-radius: 100px;
     height: 45px;
     width: 150px;
+    font-weight: 500;
     color: white;
     background-color: #5e068a;
-    font-size: 10px;
+    font-size: 12px;
+    border-color: transparent;
+}
+.a4:hover{
+   border: 2px solid #5e068a;
+    background-color: white;
+    color: #5e068a;
+ 
 }
 .a5{
     height: 400px;
@@ -110,9 +129,9 @@ font-size: 20px;
     font-weight: 600;
     font-size: 12px;
 }
-.a14{
-    height: 500px;
-}
+/* .a14{
+    height: 450px;
+} */
 .a15{
     background-color: #5e068a;
     font-size: 9px;
@@ -120,6 +139,35 @@ font-size: 20px;
     width: 100px;
 }
 
+.a16{
+    width: 190px;
+    height: 50px;
+    color: #5e068a;
+    font-weight: 600;
+    background-color: transparent;
+    border-radius: 150px;
+    border: 2px solid #5e068a ;
+}
+
+.a16:hover{
+    background-color: #5e068a;
+    color: white;
+}
+.a18:hover{
+    transform: scale(1.009);
+    box-shadow: 0 4px 8px 0 rgba(125, 125, 125, 0.769), 0 6px 20px 0 rgba(255, 255, 255, 0.9);
+}
+
+.a17:hover{
+    transform: scale(1.009);
+    box-shadow: 0 4px 8px 0 rgba(125, 125, 125, 0.769), 0 6px 20px 0 rgba(255, 255, 255, 0.9);
+}
+.a18,.a17{
+    transition: 0.5s;
+}
+.b2:hover{
+    background-color: rgba(132, 61, 198, 0.753);
+}
 
 @media(max-width:600px){
     /* .a1{
