--- a/index.css
+++ b/index.css
@@ -192,6 +192,10 @@ font-size: 20px;
     height: 300px;
     width: 100%;
 }
+.i3{
+    height: 300px;
+    width: 100%;
+}
 .b2{
     height: 30px;
     width: 100px;
