--- a/index.css
+++ b/index.css
@@ -1,12 +1,12 @@
 
 
 .i1{
-    max-width: 100%;
+    width: 100%;
     height: 600px;
     filter: brightness(50%);
 }
 .i3{
-    max-width: 100%;
+    width: 100%;
     height: 600px;
     filter: brightness(50%);
 }
